--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    // ABCDOWN VISUAL IDENTITY
+    <color name="blue">#3393C3</color>
+    <color name="green">#43B1B1</color>
+    <color name="yellow">#FABB16</color>
+    <color name="orange">#F0754E</color>
 </resources>
