--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,8 +17,9 @@
     // FONTS COLORS
     <color name="grey_placeholder">#7E7E7E</color>
 
-    // BORDER TEXTFILD
+    // BORDER TEXTFIELD
     <color name="grey_border_textfild">#D3CDCD</color>
     D3CDCD
+
 
 </resources>
