--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,7 +18,7 @@
     <color name="grey_placeholder">#7E7E7E</color>
 
     // BORDER TEXTFIELD
-    <color name="grey_border_textfild">#D3CDCD</color>
+    <color name="grey_border_textfield">#D3CDCD</color>
     D3CDCD
 
 
